src/backend/kubernetes-manifests/mongo.deployment.yaml
################################################################################
# WARNING: This MongoDB deployment is not suitable for production as the data is
# not persistently stored and will go away every time the Pod restarts. Consider
# using a Helm chart that provisions a StatefulSet instead of Deployment.
################################################################################
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nodejs-guestbook-mongodb
  labels:
    app: nodejs-guestbook
    tier: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-guestbook
      tier: db
  template:
    metadata:
      labels:
        app: nodejs-guestbook
        tier: db
    spec:
      containers:
        - name: mongo
          image: mongo:4
          ports:
            - containerPort: 27017
              name: mongodb
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - "mongo --eval 'db.adminCommand(\"ping\")'"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - "mongo --eval 'db.adminCommand(\"ping\")'"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
