src/backend/kubernetes-manifests/mongo.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs-guestbook
    tier: db
  name: nodejs-guestbook-mongodb
spec:
  clusterIP: None  # Headless service for StatefulSet
  ports:
    - port: 27017
      targetPort: 27017
      name: mongodb
  selector:
    app: nodejs-guestbook
    tier: db
